edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "wayplatform/connect/tachograph/card/v1/access_condition.proto";
import "wayplatform/connect/tachograph/card/v1/dedicated_file_type.proto";
import "wayplatform/connect/tachograph/card/v1/elementary_file_type.proto";
import "wayplatform/connect/tachograph/card/v1/file_type.proto";

// Describes a file (MF, DF, or EF) in the card's file system hierarchy.
message FileDescriptor {
  FileType type = 1;
  ElementaryFileType ef = 2;
  DedicatedFileType df = 3;
  repeated FileDescriptor files = 4;
  // Indicates if the file is conditional, as specified in the regulations.
  bool conditional = 5;
  // Short File Identifier (if applicable).
  int32 sfid = 6;
  // Access condition for Read and Select operations.
  AccessCondition read = 7;
  // Access condition for Update operations.
  AccessCondition update = 8;
}
